2008-11-21  Andrew John Hughes  <ahughes@redhat.com>

	* NEWS,
	* configure.ac:
	Bump to 1.9-pre.

2008-11-20  Andrew John Hughes  <ahughes@redhat.com>

	Prepare for 1.8 release.
	* NEWS: Updated.
	* configure.ac: Bump to 1.8.

2008-11-20  Andrew John Hughes  <ahughes@redhat.com>

	PR icedtea/236:
	* gcjwebplugin.cc,
	* Makefile.am,
	* configure.ac:
	Remove gcjwebplugin.

2008-09-04  C. K. Jester-Young  <cky944@gmail.com>

	* Makefile.am,
	* acinclude.m4:
	Add support for NIO2.

2008-11-19  Andrew John Hughes  <ahughes@redhat.com>

	* patches/icedtea-version.patch,
	Reapply Mark Wielaard's patch from
	recent merge.
	
2008-11-18  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am: Fix issues with
	distcheck so generated, pulse-audio
	and plugin files are correctly removed.
	* acinclude.m4:
	Add conditional for native ecj,
	BUILD_NATIVE_ECJ.

2008-11-17  Andrew John Hughes  <ahughes@redhat.com>

	* test/jtreg/excludelist.jdk.jtx:
	Remove NIO tests following mjw's fix.
	
2008-11-17  Andrew John Hughes  <ahughes@redhat.com>

	Merge with IcedTea6.
	* .hgignore,
	* .hgtags,
	* ChangeLog,
	* HACKING,
	* IcedTeaPlugin.cc,
	* Makefile.am,
	* contrib/mixtec-hacks.patch,
	* fsg.sh,
	* overlays/openjdk/jdk/src/share/classes/com/sun/media/sound/CHANGES.txt,
	* overlays/openjdk/jdk/src/share/classes/com/sun/media/sound/SoftAudioPusher.java,
	* overlays/openjdk/jdk/src/share/classes/com/sun/media/sound/SoftFilter.java,
	* overlays/openjdk/jdk/src/share/classes/com/sun/media/sound/SoftJitterCorrector.java,
	* overlays/openjdk/jdk/src/share/classes/com/sun/media/sound/SoftMainMixer.java,
	* overlays/openjdk/jdk/src/share/classes/com/sun/media/sound/SoftVoice.java,
	* overlays/openjdk/jdk/src/share/classes/net/sourceforge/jnlp/runtime/JNLPClassLoader.java,
	* overlays/openjdk/jdk/src/share/classes/net/sourceforge/jnlp/runtime/JNLPSecurityManager.java,
	* overlays/openjdk/jdk/src/share/classes/net/sourceforge/jnlp/security/AccessWarningPane.java,