@@ -1,6 +1,6 @@
-OPENJDK_DATE = 06_nov_2008
-OPENJDK_MD5SUM = 57062779a3c844621865faef8d423ad9
-OPENJDK_VERSION = b39
+OPENJDK_DATE = 20_nov_2008
+OPENJDK_MD5SUM = b55ade3ce62c4325d5128c7ce67873d7
+OPENJDK_VERSION = b40
 
 CACAO_VERSION = 0.99.3
 CACAO_MD5SUM = 80de3ad344c1a20c086ec5f1390bd1b8
